feat: mission version+publish and compiled contracts & concurrency safe
